Few more edits